manifests/oidc_keycloak/keycloak/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: https-keycloak
  hostnames:
    - keycloak.demo.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-keycloak-service
          port: 8080
